@@ -144,6 +144,8 @@ do	{																							\
 	[director_ setView:__glView];																\
 	[director_ setDelegate:self];																\
 	director_.wantsFullScreenLayout = YES;														\
+	if( ! [director_ enableRetinaDisplay:YES] )													\
+		CCLOG(@"Retina Display Not supported");													\
 	navController_ = [[UINavigationController alloc] initWithRootViewController:director_];		\
 	navController_.navigationBarHidden = YES;													\
 	[window_ addSubview:navController_.view];													\
